# Udemy_python

./: README.md  놀이동산 입장료 계산기.py  사각형 양수 넓이 구하기.py  사람 정보 입력 카운트.py  소수구하기.py
20161600이덕수_py/20161600_이덕수_2/: NumBaseBalls.py
20161600이덕수_py/20161600_이덕수_3/: Lotto.py
NATO-alphabet/: main.py
Udemy_python/: BMI2.0.py  Tips!!.py  coin_head_tales.py  data_types.py  leafYear.py  list_example.py  name_create_program.py  practice01.py  rand_payment.py  weightCalc.py
Udemy_python/Basic_python/: Love_Calculator.py  Rock_Scissors_Paper.py  age_calc.py  practice02.py  ra_randomExample.py
day-26/: dict_comprehension.py  filtered_even_num_list_comprehension.py  list_comprehension.py  same_data_list.py  squared_number_list_comprehension.py
day-33/: main.py
day-35/: dynamicTyping.py
day-35/weather_alert/: main.py
day-37/: main.py  readme.md
flask-study/: README.md  pyproject.toml
flask-study/flask_study/: helloflask.py
flask-study/tests/: test_flask_study.py
pythonDecorators/: main.py
