[tool.poetry]
name = "flask-study"
version = "0.1.0"
description = ""
authors = ["dja1369 <qjxlftn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
